--- a/styl.css
+++ b/styl.css
@@ -1,1 +1,3 @@
-body {background-color: aquamarine;}
+body {background-color: aquamarine;
+font-family:Arial, Helvetica, sans-serif;font-size: medium;
+line-height: 1.5;}
