--- a/styl.css
+++ b/styl.css
@@ -1,3 +1,5 @@
 body {background-color: aquamarine;
 font-family:Arial, Helvetica, sans-serif;font-size: medium;
 line-height: 1.5;}
+
+h1{background-color: bisque;}
