--- a/styl.css
+++ b/styl.css
@@ -2,4 +2,5 @@ body {background-color: aquamarine;
 font-family:Arial, Helvetica, sans-serif;font-size: medium;
 line-height: 1.5;}
 
-h1{background-color: bisque;}
+h1{background-color: bisque;
+}
