--- a/styl.css
+++ b/styl.css
@@ -3,4 +3,5 @@ font-family:Arial, Helvetica, sans-serif;font-size: medium;
 line-height: 1.5;}
 
 h1{background-color: bisque;
+    text-align: center;
 }
